# AERSA-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: README.md  config.py  main.py  pyproject.toml
backend/analytics/: __init__.py  findings.py  logging.py  mcp_tracking.py  metrics.py
backend/api/: __init__.py  json_util.py  models.py
backend/api/routes/: __init__.py  analytics.py  auth.py  brief.py  chat.py  cierre.py  companies.py  findings.py  periods.py  query.py  raw.py  report.py  sessions.py
backend/auth/: __init__.py  crud.py  dependencies.py  jwt.py  models.py  password.py
backend/db/: analytics_db.py  connection.py  views.sql
backend/db/queries/: anomalies.py  cierre.py  history.py  products.py  raw.py
backend/engine/: anomaly.py  brief.py  cleaning.py  report.py  scoring.py
backend/llm/: __init__.py  agent.py  corporativo_prompt.py  finding_prompt.py  nl2sql.py  prompts.py  streaming.py  tool_labels.py  tool_schemas.py
backend/mcp_server/: __init__.py  cache.py  server.py
backend/mcp_server/tools/: __init__.py  _errors.py  audit_brief.py  category_shrinkage.py  cierre_summary.py  product_history.py  top_anomalies.py
backend/scripts/: bootstrap_analytics_db.py  bootstrap_views.py  seed_analytics_demo.py  seed_users.py  test_agent.py  test_analytics.py  test_api.py  test_auth.py  test_briefing.py  test_engine.py  test_mcp_tools.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
(+73 files in other folders)
